--- a/terms.html
+++ b/terms.html
@@ -27,6 +27,12 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+UA-23496885-4
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu cid-s48OLK6784" once="menu" id="menu1-1s">
     
@@ -49,7 +55,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">About me</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">About me</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image2-21">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-11">Kontakt</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/RogalaPiotr" target="_blank">
@@ -144,7 +150,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">This <a href="https://mobirise.site/e" style="color:#aaa;">site</a> was designed with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(255, 255, 255, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='#e43f3f' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
