--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ UA-23496885-4
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">About me</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image2-21">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">O mnie</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image2-21">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form3-27">Kontakt</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/RogalaPiotr" target="_blank">
@@ -115,9 +115,9 @@ UA-23496885-4
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Co to jest JustCloud?</strong></h3>
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Czym to jest JustCloud?</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        JustCloud to nie tylko blog techniczny, to także pomoc kiedy masz problem ze swoim projektem informatycznym. Jeśli chciałbyś zaczerpnąć konsultacji swojego projektu zapraszam do kontaktu ze mną. Ponadto wraz z innymi osobami budujemy community IT we Wrocławiu, a na tej stronie dowiesz się o mnie więcej oraz w jakich przedsięwzięciach brałem udział. Poniżej zobaczysz również moje prezentacje i osiągnięcia.</p>
+                        JustCloud to nie tylko blog techniczny, to także pomoc kiedy masz problem ze swoim projektem informatycznym. Jeśli chciałbyś zaczerpnąć konsultacji swojego projektu zapraszam do kontaktu ze mną. Ponadto wraz z innymi osobami budujemy community IT w około rozwiązań chmurowych, a na tej stronie dowiesz się o mnie więcej oraz w jakich przedsięwzięciach brałem udział.</p>
                 </div>
             </div>
         </div>
@@ -288,7 +288,7 @@ UA-23496885-4
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Meetup'y we Wrocławiu</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">We Wrocławiu zajmuję się organizacją meetupów grupy: Microsoft Azure User Group Poland gdzie podczas spotkań dzielimy się wiedzą na temat Chmury publicznej Microsoft Azure. Poza moją grupą udzielam się również na spotkaniach innych grup tematyczny związanych z nowymi technologiami. Zapraszam do sprawdzenia grupy MAUGP i przychodzenia na nasze spotkania.<br><br><strong>Meetup's: </strong><a href="https://www.meetup.com/Microsoft-Azure-Users-Group-Poland/" class="text-primary" target="_blank">meetup/MAUGP</a><br><strong>Azure Poland:</strong> <a href="https://azurepoland.pl/" class="text-primary" target="_blank">azurepoland.pl</a><a href="https://www.meetup.com/Microsoft-Azure-Users-Group-Poland/" class="text-primary" target="_blank"><br></a><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7">We Wrocławiu zajmuję się organizacją meetupów grupy: Microsoft Azure User Group Poland gdzie podczas spotkań dzielimy się wiedzą na temat Chmury publicznej Microsoft Azure. Poza tworzeniem community udzielam się również na spotkaniach innych grup tematyczny związanych z nowymi technologiami. Zapraszam do sprawdzenia grupy MAUGP i przychodzenia na nasze spotkania.<br><br><strong>Meetup's: </strong><a href="https://www.meetup.com/Microsoft-Azure-Users-Group-Poland/" class="text-primary" target="_blank">meetup/MAUGP</a><br><strong>GitHub discussions:</strong> <a href="https://github.com/AzureCommunityPL/group/discussions" class="text-primary" target="_blank">AzureCommunityPL</a><br><strong>Azure Poland:</strong> <a href="https://azurepoland.pl/" class="text-primary" target="_blank">azurepoland.pl</a><a href="https://www.meetup.com/Microsoft-Azure-Users-Group-Poland/" class="text-primary" target="_blank"><br></a><br></p>
                 </div>
             </div>
         </div>
@@ -309,7 +309,7 @@ UA-23496885-4
                 </div>
             </div>
             <div class="col-lg-3 offset-lg-1 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rFxF+uYkyzaJBebIlTHsx7S6GMMVQIYFLFTET1WLRvyAFimpm2nt1+4I2bPH6eG4AfPNImfMHe/SvraEw3G4/UV2xOdgCK8aPwrKN5epTb6WLcH9S8zblEdoZ5dgpgBq">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NJHc07Bkm5GgBuvk3mgpo+xBL/1EISzyrlNgSOpc3FMAFI8O0V4q60Qa4vFAFb3w1K89hcXvfPAb3HT01wEeM2ATT//ygH0Zn0cvYDEgk3KiKCMapBUpZCMO1m62tb/N">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             the form!</div>
@@ -322,7 +322,7 @@ UA-23496885-4
                                 <strong>Kontakt</strong></h1>
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12">
-                            <p class="mbr-text mbr-fonts-style mb-4 display-7">Jeśli chcesz się ze mną skontaktować to możesz to zrobić za pomocą tego formularza lub poprzez&nbsp;<a href="https://www.linkedin.com/in/rogalapiotr/" class="text-primary" target="_blank">LinkedIn</a>.</p>
+                            <p class="mbr-text mbr-fonts-style mb-4 display-7">Jeśli chcesz się ze mną skontaktować to możesz to zrobić za pomocą tego formularza lub poprzez&nbsp;<a href="https://www.linkedin.com/in/rogalapiotr/" class="text-primary" target="_blank">LinkedIn</a>, do zobaczenia!</p>
                         </div>
                         <div data-for="name" class="col-lg-12 col-md col-sm-12 form-group mb-3">
                             <input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form3-27">
@@ -389,7 +389,7 @@ UA-23496885-4
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Start a free <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website <a href="https://mobirise.site/f" style="color:#aaa;">was made</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='#e43f3f' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
