--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ UA-23496885-4
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">O mnie</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image2-21">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">O mnie</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://blog.justcloud.pl/">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-28">Kontakt</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/RogalaPiotr" target="_blank">
