update page 2023 fixes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section data-bs-version="5.1" class="menu cid-s48OLK6784" once="menu" id="menu1-h">
 
         <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
                         <a href="index.html#top">
@@ -387,7 +387,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="image-wrapper">
                         <a href="https://www.subscribepage.com/wroclaw-newsletter-workshops" target="_blank"><img
-                                src="assets/images/newsletter-form-1256x1256.png" alt="newsletter"></a>
+                                src="assets/images/newsletter-form-1-1256x1256.png" alt="newsletter"></a>
                         <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
                 <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
                     <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler"
                         data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true"
-                            value="jAsGDhPw+2KigGV0IZ69Q49prpumhWs9GlRFLXhuMf1r4p/NoQwGRrzGPteCQlNg4PCtRGEWs+eOuZdbhM3Xl+X3LYARmnHhuT/6IFQyCy5YQuQb4sx9lMs/mZZzAtQe">
+                            value="y6RYlV5iz0yhoRVzgZQ2Y8mBie5KNLiGi33Tee0SInkk2B/3qw+pQS0xqAsOUU0rswJOk2tMN6ovAHdXoVSEv9UkXU4cTf36FdtKLVwxFBa0PmJ+x0puVwMmuB8Anoqi">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for
                                 filling out
@@ -559,9 +559,9 @@
     </section>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
-        <a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise <a href="https://mobirise.site/u"
-                style="color:#aaa;">web page</a> theme</p>
+        <a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with <a href="https://mobirise.site/b"
+                style="color:#aaa;">Mobirise</a> site theme</p>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/parallax/jarallax.js"></script>
