--- a/policy.html
+++ b/policy.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -56,7 +57,7 @@ G-NHQSK42DDN
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#testimonials1-z">O mnie</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://blog.justcloud.pl/">Blog</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image2-2f">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#image1-1o">Meetup's</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-28">Kontakt</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://justcloud.myspreadshop.pl/all" target="_blank">Shop</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-28">Kontakt</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/RogalaPiotr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
@@ -119,20 +120,32 @@ G-NHQSK42DDN
                             <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://pl.linkedin.com/in/rogalapiotr" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"></span>
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="index.html#form5-11">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon"></span>
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://github.com/RogalaPiotr/JustCloudPublic" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon"></span>
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/channel/UCgc7a0x8SVkLbsI6pmfL21A" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                        </a>
+                    </div><div class="soc-item">
+                        <a href="https://twitter.com/RogalaPiotr" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div></div>
             </div>
@@ -146,6 +159,8 @@ G-NHQSK42DDN
 </section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2609593" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
-<input name="cookieData" type="hidden" data-cookie-cookiesAlertType='false' data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgb(234, 239, 241)' data-cookie-opacityOverlay='80' data-cookie-bgOpacity='undefined' data-cookie-textButton='Agree' data-cookie-rejectText='REJECT' data-cookie-colorButton='#e43f3f' data-cookie-rejectColor='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-cookiesAlertType='false' data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgb(234, 239, 241)' data-cookie-opacityOverlay='80' data-cookie-bgOpacity='100' data-cookie-textButton='Agree' data-cookie-rejectText='Reject' data-cookie-colorButton='#e43f3f' data-cookie-rejectColor='#ffffff' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
