Enhance 404 page with logo and improved navigation links; update cookie banner styling for better user experience

--- a/index.html
+++ b/index.html
@@ -900,23 +900,20 @@
     </footer>
 
     <!-- Cookie Banner -->
-    <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-gray-900/95 dark:bg-gray-950/95 backdrop-blur-md border-t border-gray-700 dark:border-gray-600 p-4 sm:p-6 z-50 transform translate-y-full transition-transform duration-300 hidden">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-5xl">
-            <div class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4">
-                <div class="flex-1">
-                    <p class="text-sm text-gray-300 dark:text-gray-400 mb-2">
-                        <strong class="text-white dark:text-gray-100">Używamy plików cookie</strong>
-                    </p>
-                    <p class="text-sm text-gray-300 dark:text-gray-400">
+    <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-gray-900 dark:bg-gray-950 border-t border-gray-700 dark:border-gray-800 p-3 sm:p-4 z-50 translate-y-full transition-transform duration-300 hidden">
+        <div class="container mx-auto px-4 max-w-6xl">
+            <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 sm:gap-4">
+                <div class="flex-1 min-w-0">
+                    <p class="text-xs sm:text-sm text-gray-300 dark:text-gray-400">
                         Używamy plików cookie do analizy ruchu (Google Analytics), aby zapewnić najlepsze doświadczenia na naszej stronie. Czy wyrażasz zgodę? 
-                        <a href="privacy-policy.html" class="text-jc-blue-400 dark:text-jc-blue-300 hover:underline">Dowiedz się więcej w naszej Polityce Prywatności.</a>
+                        <a href="privacy-policy.html" class="text-jc-blue-400 dark:text-jc-blue-300 hover:underline whitespace-nowrap">Polityka Prywatności</a>
                     </p>
                 </div>
-                <div class="flex flex-col sm:flex-row gap-3 w-full sm:w-auto">
-                    <button id="cookie-reject" class="px-6 py-2 text-sm text-gray-300 dark:text-gray-400 hover:text-white dark:hover:text-gray-100 border border-gray-600 dark:border-gray-500 hover:border-gray-500 dark:hover:border-gray-400 rounded-lg transition-colors order-2 sm:order-1">
-                        Nie akceptuję
+                <div class="flex gap-2 sm:gap-3 flex-shrink-0">
+                    <button id="cookie-reject" class="flex-1 sm:flex-none px-4 py-1.5 text-xs sm:text-sm text-gray-400 hover:text-white border border-gray-700 hover:border-gray-600 rounded transition-colors">
+                        Odrzuć
                     </button>
-                    <button id="cookie-accept" class="px-6 py-2 text-sm bg-jc-blue-600 dark:bg-jc-blue-700 hover:bg-jc-blue-700 dark:hover:bg-jc-blue-600 text-white font-semibold rounded-lg transition-colors order-1 sm:order-2">
+                    <button id="cookie-accept" class="flex-1 sm:flex-none px-4 py-1.5 text-xs sm:text-sm bg-jc-blue-600 hover:bg-jc-blue-700 text-white font-medium rounded transition-colors">
                         Akceptuję
                     </button>
                 </div>
