--- a/404.html
+++ b/404.html
@@ -22,13 +22,21 @@
 </head>
 <body class="font-inter antialiased bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 flex items-center justify-center min-h-screen p-6">
     <main class="text-center max-w-xl">
+        <div class="mb-8 flex items-center justify-center gap-3">
+            <img src="img/logo.png" alt="JustCloud.pl Logo" class="h-16 w-auto" loading="eager">
+            <span class="font-space-mono font-bold text-2xl text-jc-blue-600 dark:text-jc-blue-300">JustCloud.pl</span>
+        </div>
         <h1 class="font-space-mono text-7xl font-bold mb-6 text-jc-blue-600 dark:text-jc-blue-400">404</h1>
         <p class="text-lg md:text-xl mb-8 text-gray-700 dark:text-gray-300">Ups! Wygląda na to, że ta strona nie istnieje albo link jest nieaktualny.</p>
         <div class="space-y-4">
             <p class="text-gray-600 dark:text-gray-400">Możesz przejść do:</p>
-            <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="https://web.justcloud.pl" class="px-6 py-4 bg-jc-blue-600 hover:bg-jc-blue-700 text-white font-semibold rounded-lg shadow-lg transition-all">Strona główna</a>
-                <a href="https://blog.justcloud.pl" class="px-6 py-4 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 font-semibold rounded-lg shadow-sm transition-all">Blog</a>
+            <div class="flex flex-col sm:flex-row gap-4 sm:gap-6 justify-center">
+                <a href="https://web.justcloud.pl" class="w-full sm:w-auto px-8 py-4 bg-white dark:bg-gray-800 text-gray-900 dark:text-white hover:bg-gray-50 dark:hover:bg-gray-700 font-semibold rounded-lg border-2 border-gray-200 dark:border-gray-600 shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
+                    Strona główna
+                </a>
+                <a href="https://blog.justcloud.pl" class="w-full sm:w-auto px-8 py-4 bg-white dark:bg-gray-800 text-gray-900 dark:text-white hover:bg-gray-50 dark:hover:bg-gray-700 font-semibold rounded-lg border-2 border-gray-200 dark:border-gray-600 shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
+                    Blog
+                </a>
             </div>
         </div>
         <div class="mt-10 text-sm text-gray-500 dark:text-gray-400">Jeśli uważasz, że to błąd – <a href="https://web.justcloud.pl/#contact" class="underline hover:text-jc-blue-600 dark:hover:text-jc-blue-400">skontaktuj się przez formularz</a></div>
