--- a/index.html
+++ b/index.html
@@ -278,6 +278,20 @@
                         </p>
                     </div>
                 </div>
+                
+                <!-- CTA Buttons -->
+                <div class="flex flex-col sm:flex-row items-center justify-center gap-4 sm:gap-6 mt-12">
+                    <a href="https://tidycal.com/justcloud/15-minute-meeting" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="cta-button-primary w-full sm:w-auto px-8 py-4 bg-jc-blue-600 hover:bg-jc-blue-700 text-white font-semibold rounded-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
+                        Bezpłatna konsultacja
+                    </a>
+                    <a href="#contact" 
+                       class="cta-button-secondary w-full sm:w-auto px-8 py-4 bg-white dark:bg-gray-800 hover:bg-gray-100 dark:hover:bg-gray-700 text-gray-900 dark:text-white font-semibold rounded-lg border-2 border-gray-300 dark:border-gray-600 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
+                        Wyślij wiadomość
+                    </a>
+                </div>
             </div>
         </section>
 
