Add MVP profile and Sessionize links to the homepage

--- a/index.html
+++ b/index.html
@@ -419,6 +419,33 @@
                                     </svg>
                                     <span class="font-medium text-gray-700 dark:text-gray-300 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">Blog</span>
                                 </a>
+                                
+                                <!-- MVP Profile -->
+                                <a href="https://mvp.microsoft.com/en-US/mvp/profile/55988764-f35a-e711-8114-3863bb2ed1f8" 
+                                   target="_blank" 
+                                   rel="noopener noreferrer"
+                                   class="flex items-center gap-3 px-5 py-3 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 hover:shadow-lg transition-all duration-300 group">
+                                    <svg class="w-6 h-6 text-[#0078D4] group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M0 0v11.408h11.408V0zm12.594 0v11.408H24V0zM0 12.594V24h11.408V12.594zm12.594 0V24H24V12.594z"/>
+                                    </svg>
+                                    <span class="font-medium text-gray-700 dark:text-gray-300 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">MVP Profile</span>
+                                </a>
+                                
+                                <!-- Sessionize -->
+                                <a href="https://sessionize.com/piotr-rogala/" 
+                                   target="_blank" 
+                                   rel="noopener noreferrer"
+                                   class="flex items-center gap-3 px-5 py-3 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 hover:shadow-lg transition-all duration-300 group">
+                                    <img src="https://sessionize.com/landing/images/brand/logo/sessionize-avatar-invert.svg" 
+                                         alt="Sessionize" 
+                                         class="w-6 h-6 group-hover:scale-110 transition-transform block dark:hidden"
+                                         loading="lazy">
+                                    <img src="https://sessionize.com/landing/images/brand/logo/sessionize-avatar.svg" 
+                                         alt="Sessionize" 
+                                         class="w-6 h-6 group-hover:scale-110 transition-transform hidden dark:block"
+                                         loading="lazy">
+                                    <span class="font-medium text-gray-700 dark:text-gray-300 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">Sessionize</span>
+                                </a>
                             </div>
                         </div>
                     </div>
