Update privacy policy text for clarity and consistency

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -138,7 +138,7 @@
                 <!-- Introduction -->
                 <section class="mb-12">
                     <p class="text-lg leading-relaxed text-gray-600 dark:text-gray-300">
-                        Witaj! Cieszę się, że odwiedzasz mój blog. Poniżej znajdziesz informacje o tym, jakie dane są zbierane podczas korzystania z mojej strony, w jaki sposób są wykorzystywane oraz jakie prawa Ci przysługują.
+                        Witaj! Cieszę się, że odwiedzasz moją stronę. Poniżej znajdziesz informacje o tym, jakie dane są zbierane podczas korzystania z mojej strony, w jaki sposób są wykorzystywane oraz jakie prawa Ci przysługują.
                     </p>
                 </section>
 
@@ -151,7 +151,7 @@
                         <p>✉️ <a href="index.html#contact" class="text-jc-blue-600 dark:text-jc-blue-400 hover:underline">Formularz kontaktowy</a></p>
                     </div>
                     <p class="text-gray-600 dark:text-gray-300">
-                        Ponieważ strona jest hobbystycznym blogiem, nie wyznaczono Inspektora Ochrony Danych.
+                        Ponieważ strona jest projektem hobbystycznym, nie wyznaczono Inspektora Ochrony Danych.
                     </p>
                 </section>
 
@@ -159,7 +159,7 @@
                 <section id="section-2" class="mb-12">
                     <h2 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">2. Zakres przetwarzania danych</h2>
                     <p class="mb-4 text-gray-600 dark:text-gray-300">
-                        Podczas korzystania z mojego bloga przetwarzane są dane techniczne oraz dane osobowe, które dobrowolnie podajesz korzystając z dostępnych funkcjonalności:
+                        Podczas korzystania z mojej strony przetwarzane są dane techniczne oraz dane osobowe, które dobrowolnie podajesz korzystając z dostępnych funkcjonalności:
                     </p>
                     <ul class="list-disc pl-6 mb-4 space-y-2 text-gray-600 dark:text-gray-300">
                         <li><strong>Formularz kontaktowy (Formspree)</strong> – adres e-mail i treść wiadomości w celu obsługi zapytania;</li>
@@ -271,7 +271,7 @@
                 <section id="section-9" class="mb-12">
                     <h2 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">9. Hosting</h2>
                     <p class="text-gray-600 dark:text-gray-300">
-                        Blog jest hostowany na platformie <strong>GitHub Pages</strong>, która może zbierać anonimowe dane techniczne (np. adres IP) w zakresie niezbędnym do świadczenia usługi hostingu.
+                        Strona jest hostowana na platformie <strong>GitHub Pages</strong>, która może zbierać anonimowe dane techniczne (np. adres IP) w zakresie niezbędnym do świadczenia usługi hostingu.
                     </p>
                 </section>
 
