Update .gitignore to include temporary HTML files and modify privacy policy footer for improved clarity and cookie settings functionality

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -359,28 +359,20 @@
     <!-- Footer -->
     <footer class="bg-gray-900 dark:bg-gray-950 text-gray-300 dark:text-gray-400 py-8">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <!-- Mobile Dark Mode Toggle (visible only on mobile) -->
-            <div class="flex justify-center mb-4 md:hidden">
-                <button id="theme-toggle-mobile" type="button" class="p-2 text-gray-300 hover:text-white hover:bg-gray-800 rounded-lg transition-colors" aria-label="Toggle dark mode">
-                    <svg class="theme-toggle-dark-icon hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-                    </svg>
-                    <svg class="theme-toggle-light-icon hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path>
-                    </svg>
-                </button>
-            </div>
-            
+            <!-- Copyright -->
             <div class="text-center text-sm text-gray-500 dark:text-gray-500">
                 <p>&copy; 2025 JustCloud.pl. Wszystkie prawa zastrzeżone.</p>
                 <p class="mt-2">
-                    <a href="privacy-policy.html" class="text-jc-blue-400 dark:text-jc-blue-300 hover:underline">Polityka Prywatności i Cookies</a>
+                    <a href="privacy-policy.html" class="text-jc-blue-400 dark:text-jc-blue-300 hover:underline">Polityka prywatności i cookies</a>
+                    <span class="mx-2">|</span>
+                    <button id="cookie-settings-footer" class="text-jc-blue-400 dark:text-jc-blue-300 hover:underline cursor-pointer">Ustawienia cookies</button>
                 </p>
             </div>
         </div>
     </footer>
 
     <!-- Scripts -->
+    <script src="js/main.js"></script>
     <script>
         // Redirect to settings when clicking "Ustawienia cookies" link in content
         document.getElementById('cookie-settings-link')?.addEventListener('click', function() {
