Implement Google Consent Mode and update consent handling in JavaScript for analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
+    <!-- Google Consent Mode -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('consent', 'default', {
+            'ad_storage': 'denied',
+            'ad_user_data': 'denied',
+            'ad_personalization': 'denied',
+            'analytics_storage': 'denied'
+        });
+    </script>
+
     <!-- Primary Meta Tags -->
     <title>JustCloud.pl - Azure Cloud Architect | MVP | MCT</title>
     <meta name="title" content="JustCloud.pl - Azure Cloud Architect | MVP | MCT">
