Add Medium link to homepage for enhanced visibility

--- a/index.html
+++ b/index.html
@@ -432,6 +432,17 @@
                                     <span class="font-medium text-gray-700 dark:text-gray-300 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">Blog</span>
                                 </a>
                                 
+                                <!-- Medium -->
+                                <a href="https://piotr-rogala.medium.com/" 
+                                   target="_blank" 
+                                   rel="noopener noreferrer"
+                                   class="flex items-center gap-3 px-5 py-3 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 hover:shadow-lg transition-all duration-300 group">
+                                    <svg class="w-6 h-6 text-gray-700 dark:text-gray-300 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.96 12c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.83 24 12z"/>
+                                    </svg>
+                                    <span class="font-medium text-gray-700 dark:text-gray-300 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">Medium</span>
+                                </a>
+                                
                                 <!-- MVP Profile -->
                                 <a href="https://mvp.microsoft.com/en-US/mvp/profile/55988764-f35a-e711-8114-3863bb2ed1f8" 
                                    target="_blank" 
