Enhance SEO and accessibility: add screen reader styles, redirect index.html, and update meta descriptions

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,9 +8,9 @@
     <!-- Primary Meta Tags -->
     <title>Polityka Prywatności i Plików Cookies - JustCloud.pl</title>
     <meta name="title" content="Polityka Prywatności i Plików Cookies - JustCloud.pl">
-    <meta name="description" content="Informacje o przetwarzaniu danych osobowych, plikach cookies i zgodności z RODO na stronie JustCloud.pl">
+    <meta name="description" content="Polityka prywatności JustCloud.pl - informacje o przetwarzaniu danych osobowych, plikach cookies, Google Analytics i zgodności z RODO. Twoje prawa i nasze zobowiązania.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://justcloud.pl/privacy-policy.html">
+    <link rel="canonical" href="https://web.justcloud.pl/privacy-policy.html">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
