--- a/wideo-i-prezentacje.html
+++ b/wideo-i-prezentacje.html
@@ -8,9 +8,9 @@
     <!-- Primary Meta Tags -->
     <title>Wideo i Prezentacje - JustCloud.pl</title>
     <meta name="title" content="Wideo i Prezentacje - JustCloud.pl">
-    <meta name="description" content="Kolekcja moich wystąpień, prezentacji i nagrań wideo na temat Microsoft Azure, DevOps i chmury obliczeniowej.">
+    <meta name="description" content="Nagrania wideo i prezentacje Piotra Rogali - Microsoft MVP. Wystąpienia z konferencji o Azure, DevOps, Terraform, Bicep i automatyzacji chmury. Oglądaj za darmo.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://justcloud.pl/wideo-i-prezentacje.html">
+    <link rel="canonical" href="https://web.justcloud.pl/wideo-i-prezentacje.html">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
